# SudokuProject

./: .gitignore  CMakeLists.txt  README.md  build.sh  opt.sh  optimize.sh
include/: SudokuSolver.cpp  SudokuSolver.hpp
src/: SudokuSolver.cpp  main.cpp
tests/: CMakeLists.txt  README.md  create_structure.sh  test_game_logic.cpp  test_main.cpp  test_performance.cpp  test_sudoku_solver.cpp
